# spredle

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
src/config/: config.yaml
src/spredle/: __init__.py  cli.py  dataset.py  downloader.py  models.py  preprocess.py  trainer.py  utils.py
src/spredle/config/: config.yaml
